[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://game/ui/DebugHud.gd" id="1_hud"]

[ext_resource type="PackedScene" path="res://game/ui/widgets/MiniMap.tscn" id="2_mm"]

[ext_resource type="PackedScene" path="res://game/ui/widgets/WeaponPanel.tscn" id="3_wp"]

[ext_resource type="PackedScene" path="res://game/ui/widgets/BuildPanel.tscn" id="4_bp"]

[ext_resource type="PackedScene" path="res://game/ui/widgets/TargetPanel.tscn" id="5_tp"]

[ext_resource type="Script" path="res://game/ui/widgets/WulframBar.gd" id="6_wbar"]

[node name="DebugHud" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 520.0
offset_bottom = 180.0

[node name="NetPanel" type="Panel" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 44.0

[node name="Label" type="Label" parent="NetPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 6.0
offset_right = -8.0
offset_bottom = -6.0
theme_override_font_sizes/font_size = 14
text = "Peer ?  ...  FPS ?  Snap ?ms"

[node name="Label" type="Label" parent="Panel"]
anchors_preset = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 500.0
offset_bottom = 160.0
autowrap_mode = 3
text = "(debug)"


[node name="StatusLabel" type="Label" parent="Panel"]
anchors_preset = 0
offset_left = 8.0
offset_top = 120.0
offset_right = 504.0
offset_bottom = 168.0
theme_override_font_sizes/font_size = 14
text = ""

[node name="ToastLabel" type="Label" parent="Panel"]
anchors_preset = 0
offset_left = 8.0
offset_top = 92.0
offset_right = 504.0
offset_bottom = 118.0
theme_override_font_sizes/font_size = 16
text = ""
visible = false

[node name="ToastOverlay" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -420.0
offset_top = -210.0
offset_right = 420.0
offset_bottom = -180.0
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
theme_override_font_sizes/font_size = 16
text = ""
visible = false

[node name="StatsPanel" type="Panel" parent="."]
anchors_preset = 10
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -170.0
offset_right = 360.0
offset_bottom = -8.0

[node name="VBox" type="VBoxContainer" parent="StatsPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
theme_override_constants/separation = 4

[node name="Veh" type="Label" parent="StatsPanel/VBox"]
theme_override_font_sizes/font_size = 14
text = "VEH: TANK"

[node name="Power" type="Label" parent="StatsPanel/VBox"]
theme_override_font_sizes/font_size = 14
text = ""

[node name="HPRow" type="HBoxContainer" parent="StatsPanel/VBox"]
theme_override_constants/separation = 6

[node name="K" type="Label" parent="StatsPanel/VBox/HPRow"]
theme_override_font_sizes/font_size = 14
text = "HP"

[node name="Bar" type="Control" parent="StatsPanel/VBox/HPRow"]
custom_minimum_size = Vector2(200, 14)
size_flags_horizontal = 3
script = ExtResource("6_wbar")
back_tex_name = "blue_bar_back"
fill_tex_name = "green_bar"
overlay_dark = 0.12

[node name="Val" type="Label" parent="StatsPanel/VBox/HPRow"]
theme_override_font_sizes/font_size = 14
text = "100/100"

[node name="FuelRow" type="HBoxContainer" parent="StatsPanel/VBox"]
theme_override_constants/separation = 6

[node name="K" type="Label" parent="StatsPanel/VBox/FuelRow"]
theme_override_font_sizes/font_size = 14
text = "Fuel"

[node name="Bar" type="Control" parent="StatsPanel/VBox/FuelRow"]
custom_minimum_size = Vector2(200, 14)
size_flags_horizontal = 3
script = ExtResource("6_wbar")
back_tex_name = "blue_bar_back"
fill_tex_name = "yellow_bar"
overlay_dark = 0.12

[node name="Val" type="Label" parent="StatsPanel/VBox/FuelRow"]
theme_override_font_sizes/font_size = 14
text = "100/100"

[node name="ChargeRow" type="HBoxContainer" parent="StatsPanel/VBox"]
theme_override_constants/separation = 6
visible = false

[node name="K" type="Label" parent="StatsPanel/VBox/ChargeRow"]
theme_override_font_sizes/font_size = 14
text = "Chg"

[node name="Bar" type="Control" parent="StatsPanel/VBox/ChargeRow"]
custom_minimum_size = Vector2(200, 14)
size_flags_horizontal = 3
script = ExtResource("6_wbar")
back_tex_name = "blue_bar_back"
fill_tex_name = "blue_bar"
overlay_dark = 0.12

[node name="Val" type="Label" parent="StatsPanel/VBox/ChargeRow"]
theme_override_font_sizes/font_size = 14
text = "0/100"

[node name="CargoRow" type="HBoxContainer" parent="StatsPanel/VBox"]
theme_override_constants/separation = 6

[node name="K" type="Label" parent="StatsPanel/VBox/CargoRow"]
theme_override_font_sizes/font_size = 14
text = "Cargo"

[node name="Val" type="Label" parent="StatsPanel/VBox/CargoRow"]
theme_override_font_sizes/font_size = 14
text = "0/5"

[node name="SpeedRow" type="HBoxContainer" parent="StatsPanel/VBox"]
theme_override_constants/separation = 6

[node name="K" type="Label" parent="StatsPanel/VBox/SpeedRow"]
theme_override_font_sizes/font_size = 14
text = "Spd"

[node name="Val" type="Label" parent="StatsPanel/VBox/SpeedRow"]
theme_override_font_sizes/font_size = 14
text = "7"

[node name="MiniMapPanel" type="Panel" parent="."]
anchors_preset = 9
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -190.0
offset_top = -190.0
offset_right = -8.0
offset_bottom = -8.0

[node name="MiniMap" parent="MiniMapPanel" instance=ExtResource("2_mm")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = -6.0

[node name="WeaponPanel" parent="." instance=ExtResource("3_wp")]
anchors_preset = 13
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -170.0
offset_right = 180.0
offset_bottom = -8.0

[node name="BuildPanel" parent="." instance=ExtResource("4_bp")]
anchors_preset = 10
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 368.0
offset_top = -110.0
offset_right = 528.0
offset_bottom = -8.0

[node name="CenterOverlay" type="Control" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="Reticle" type="TextureRect" parent="CenterOverlay"]
anchors_preset = 8
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
custom_minimum_size = Vector2(64, 64)
expand_mode = 1
stretch_mode = 4
texture_filter = 1

[node name="Crosshair" type="Label" parent="CenterOverlay"]
anchors_preset = 8
offset_left = -10.0
offset_top = -14.0
offset_right = 10.0
offset_bottom = 14.0
horizontal_alignment = 1
vertical_alignment = 1
text = "+"
visible = false

[node name="Hit" type="Label" parent="CenterOverlay"]
anchors_preset = 8
offset_left = -60.0
offset_top = 26.0
offset_right = 60.0
offset_bottom = 56.0
horizontal_alignment = 1
vertical_alignment = 1
text = "HIT"
visible = false

[node name="TargetPanel" parent="CenterOverlay" instance=ExtResource("5_tp")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
